# ImgToPix

./: .gitignore  README.md  app.py  bootstrap.py  build_exe.bat  pyproject.toml  requirements.txt  start.bat
config/: settings.py
core/: image_loader.py  preprocess.py
docs/: cli.md  gui.md  usage.md
gui/: main_window.py  preview_panel.py  workers.py
skill/image-to-pixel/: SKILL.md
skill/image-to-pixel/agents/: openai.yaml
skill/image-to-pixel/references/: commands.md
src/imagetopixel/: bootstrap.py  cli.py
src/imagetopixel/config/: __init__.py
src/imagetopixel/core/: __init__.py  exporter.py  image_loader.py  models.py  pixelizer.py  preprocess.py  square_pad.py
src/imagetopixel/gui/: main_window.py  preview_panel.py  workers.py
tests/: test_batch_cli.py  test_cli.py  test_pixelizer.py  test_square_pad.py
